# XunliBot

./: .env.dev.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
data/manager/: plugin_list.yml
menu_config/: config.json
menu_config/menus/: nonebot_plugin_auto_teenstudy.json  nonebot_plugin_cocdicer.json  nonebot_plugin_epicfree.json  nonebot_plugin_miragetank.json
src/plugins/heisi_dev/: __init__.py
src/plugins/moyu/: __init__.py  data_source.py
src/plugins/nonebot_plugin_aidraw/: config.py
src/plugins/nonebot_plugin_auto_teenstudy/: __init__.py  getData.py  handle_dxx_data.py
src/plugins/nonebot_plugin_auto_teenstudy/data/: dxx_list.json
src/plugins/nonebot_plugin_leetcode2/: __init__.py
src/plugins/random_cat_gif/: __init__.py  data_source.py
