[tool.poetry]
name = "XunliBot"
version = "0.1.0"
description = "XunliBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0b1"
websockets = "^10.3"
nonebot-adapter-onebot = "^2.1.3"
nonebot-plugin-manager = "^0.5.9"
nonebot-plugin-apscheduler = "0.1.4"
nonebot-plugin-epicfree = "^0.1.9"
nonebot-plugin-status = "^0.4.0"
nb-cli = "^0.6.7"
nonebot-plugin-picsearcher = "^0.1.8"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_epicfree",
            "nonebot_plugin_manager",
            "nonebot_plugin_status",
            "nonebot_plugin_picsearcher"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
